--- a/debian/rules
+++ b/debian/rules
@@ -8,3 +8,9 @@
 %:
 	dh $@
 
+override_dh_fixperms:
+	dh_fixperms
+	chmod 4755 debian/with/usr/bin/exec_with_namespace
+
+override_dh_installinit:
+	dh_installinit --name=with -- defaults 99
